Build improvements mirrored after upstream rpminspect
Update the build scripts and get things more in line with the
rpminspect package.

Signed-off-by: David Cantrell <dcantrell@redhat.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -24,15 +24,19 @@ SPEC := $(topdir)/$(shell basename $(SPEC_TEMPLATE) .in)
 
 # Replace placeholders in the spec file template
 RPMDATE = $(shell date +'%a %b %d %Y')
+RPMAUTHOR = $(shell git log | tac | grep ^Author: | head -n 1 | cut -d ' ' -f 2,3,4)
 
 # Various things we need to generate a tarball
 PKG := $(shell grep ^Name: "$(SPEC_TEMPLATE)" | awk '{ print $$2; }')
 VER := $(shell grep 'version :' $(topdir)/meson.build | grep -E "'[0-9]+\.[0-9]+'" | cut -d "'" -f 2)
 
 ifeq ($(BUILDTYPE),copr)
-GITDATE = $(shell date +'%Y%m%d%H%M')
-GITHASH = $(shell git rev-parse --short HEAD)
+GITDATE          = $(shell date +'%Y%m%d%H%M')
+GITHASH          = $(shell git rev-parse --short HEAD)
 TARBALL_BASENAME = $(PKG)-$(VER)-$(GITDATE)git$(GITHASH)
+TAG              = HEAD
+else
+TAG              = $(shell git tag -l | tail -n 1)
 endif
 
 ifeq ($(BUILDTYPE),release)
@@ -42,26 +46,25 @@ endif
 srpm:
 	$(topdir)/.copr/instpkgs.sh $(SPEC_TEMPLATE)
 	sed -e 's|%%VERSION%%|$(VER)|g' < "$(SPEC_TEMPLATE)" > "$(SPEC)"
-	sed -i -e 's|%%RPMDATE%%|$(RPMDATE)|g' "$(SPEC)"
-	sed -i -e 's|%%TARBALL%%|$(TARBALL_BASENAME).tar.xz|g' "$(SPEC)"
-	sed -i -e 's|^%setup.*$$|%setup -q -n $(TARBALL_BASENAME)|g' "$(SPEC)"
+	sed -i -e 's|%%GPGKEYRING%%|gpgkey-$(GPGKEY).gpg|g' "$(SPEC)"
 ifeq ($(BUILDTYPE),copr)
 	sed -i -e '/^Release:/ s/1[^%]*/0.1.$(GITDATE)git$(GITHASH)/' "$(SPEC)"
+	sed -i -e 's|^Source0:.*$$|Source0: $(TARBALL_BASENAME).tar.xz|g' "$(SPEC)"
+	sed -i -e 's|^%autosetup.*$$|%autosetup -n $(TARBALL_BASENAME)|g' "$(SPEC)"
+	sed -i -e '/^Source1:.*$$/d' "$(SPEC)"
+	sed -i -e '/^Source2:.*$$/d' "$(SPEC)"
+	sed -i -e '/^%{gpgverify}.*$$/d' "$(SPEC)"
+	echo "* $(RPMDATE) $(RPMAUTHOR) - $(VER)-$(GITDATE)git$(GITHASH)" >> "$(SPEC)"
+	echo "- Build rpminspect-$(VER)-$(GITDATE)git$(GITHASH) snapshot" >> "$(SPEC)"
 endif
+	rm -f "$(TARBALL_BASENAME)".tar.xz.asc
 	git archive \
 		--format=tar \
 		--output='$(topdir)/$(TARBALL_BASENAME).tar' \
-		--prefix='$(TARBALL_BASENAME)/' HEAD $(topdir)
+		--prefix='$(TARBALL_BASENAME)/' $(TAG) $(topdir)
 	xz -9f $(topdir)/$(TARBALL_BASENAME).tar
-	sed -i -n '/^%changelog/q;p' "$(SPEC)"
-	echo "%changelog" >> "$(SPEC)"
-	echo "* $$(date +"%a %b %d %Y") $$(git config user.name) <$$(git config user.email)> - $(VER)-1" >> "$(SPEC)"
-ifeq ($(BUILDTYPE),copr)
-	echo "- $$(grep ^URL: "$(SPEC)" | head -n 1 | awk '{ print $$2; }')/commits" >> "$(SPEC)"
-endif
-ifeq ($(BUILDTYPE),release)
-	echo "- Upgrade to $(PKG)-$(VER)" >> "$(SPEC)"
-endif
+	gpg --detach-sign --armor "$(TARBALL_BASENAME)".tar.xz
+	gpg --export -a $(GPGKEY) > gpgkey-$(GPGKEY).gpg
 	rpmbuild \
 		-bs --nodeps \
 		--define "_sourcedir $(topdir)" \
