BuildRequires ninja-build and gnupg2
Signed-off-by: David Cantrell <dcantrell@redhat.com>

--- a/rpminspect-data-centos.spec.in
+++ b/rpminspect-data-centos.spec.in
@@ -13,6 +13,8 @@ Source2:        %%GPGKEYRING%%
 BuildArch:      noarch
 
 BuildRequires:  meson
+BuildRequires:  ninja-build
+BuildRequires:  gnupg2
 
 Requires:       rpminspect >= 1.7
 
