Requires: /usr/bin/annocheck
The package providing /usr/bin/annocheck is not consistently named
from EPEL-7 through current Fedora, so just require the executable
explicitly.

Signed-off-by: David Cantrell <dcantrell@redhat.com>

--- a/rpminspect-data-centos.spec.in
+++ b/rpminspect-data-centos.spec.in
@@ -27,8 +27,8 @@ Requires:       zsh
 Requires:       tcsh
 Requires:       rc
 Requires:       bash
-Requires:       annobin-annocheck >= 9.71
 Requires:       libabigail
+Requires:       /usr/bin/annocheck
 
 %description
 CentOS and CentOS Stream specific configuration file for rpminspect
