--- a/rpminspect-data-centos.spec.in
+++ b/rpminspect-data-centos.spec.in
@@ -16,9 +16,10 @@ BuildRequires:  meson
 BuildRequires:  ninja-build
 BuildRequires:  gnupg2
 
-Requires:       rpminspect >= 1.7
+Requires:       rpminspect >= 1.9
 
 # Used by inspections enabled in the configuration file
+Requires:       fedora-license-data
 Requires:       xhtml1-dtds
 Requires:       html401-dtds
 Requires:       dash
